@@ -1,4 +1,3 @@
 brew 'make'
 brew 'cmake'
 brew 'openssl'
-brew 'qt@6'
